Added Thank you and Why are we here

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 			<div class="slides">
 				<section data-markdown="slides/title.md" data-background="assets/st-petersburg-1850.jpg"></section>
 				<section data-markdown="slides/whoami.md"></section>
+				<section data-markdown="slides/why-are-we-here.md"></section>
 				<section>
 					<section data-markdown="slides/history/brief-history.md"></section>
 					<section data-markdown="slides/history/webpages-like-1999.md"></section>
@@ -64,7 +65,7 @@
 					<section data-markdown="slides/plugins/cssnext.md"></section>
 					<section data-markdown="slides/plugins/stylelint.md"></section>
 				</section>
-				<section data-markdown="slides/outline.md"></section>
+				<section data-markdown="slides/thank-you.md"></section>
 			</div>
 		</div>
 
