--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/solarized.css">
+		<link rel="stylesheet" href="css/theme/league.css">
 		<link rel="stylesheet" href="css/overrides.css">
 
 		<!-- Theme used for syntax highlighting of code -->
@@ -25,47 +25,63 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section data-markdown="slides/title.md" data-background="assets/st-petersburg-1850.jpg"></section>
-				<section data-markdown="slides/whoami.md"></section>
-				<section data-markdown="slides/why-are-we-here.md"></section>
 				<section>
-					<section data-markdown="slides/history/brief-history.md"></section>
-					<section data-markdown="slides/history/webpages-like-1999.md"></section>
-					<section data-markdown="slides/history/webpages-like-2001.md"></section>
-					<section data-markdown="slides/history/css-zen-garden.md"></section>
-					<section data-markdown="slides/history/html5-to-the-rescue.md"></section>
-					<section data-markdown="slides/history/css-history.md"></section>
+					<section data-markdown="slides/01-opening/01-title.md" data-background="assets/st-petersburg-1850.jpg"></section>
+					<section data-markdown="slides/01-opening/02-whoami.md"></section>
+					<section data-markdown="slides/01-opening/03-sorry.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/pre-processing/title.md"></section>
-					<section data-markdown="slides/pre-processing/good.md"></section>
-					<section data-markdown="slides/pre-processing/bad.md"></section>
+					<section data-markdown="slides/02-history/01-title.md"></section>
+					<section data-markdown="slides/02-history/02-special-css.md"></section>
+					<section data-markdown="slides/02-history/brief-history.md"></section>
+					<section data-markdown="slides/02-history/webpages-like-1999.md"></section>
+					<section data-markdown="slides/02-history/webpages-like-2001.md"></section>
+					<section data-markdown="slides/02-history/css-zen-garden.md"></section>
+					<section data-markdown="slides/02-history/css-history.md"></section>
+					<section data-markdown="slides/02-history/html5-to-the-rescue.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/css-architecture/title.md"></section>
-					<section data-markdown="slides/css-architecture/bem.md"></section>
-					<section data-markdown="slides/css-architecture/maintainable-css.md"></section>
-					<section data-markdown="slides/css-architecture/css-modules.md"></section>
+					<section data-markdown="slides/03-pre-processor/01-title.md"></section>
+					<section data-markdown="slides/03-pre-processor/04-vs.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/new-css-features/title.md"></section>
-					<section data-markdown="slides/new-css-features/colour-functions.md"></section>
-					<section data-markdown="slides/new-css-features/custom-properties.md"></section>
+					<section data-markdown="slides/04-postcss-intro/01-title.md"></section>
+					<section data-markdown="slides/04-postcss-intro/bad.md"></section>
+					<section data-markdown="slides/04-postcss-intro/basics.md"></section>
+					<section data-markdown="slides/04-postcss-intro/creation.md"></section>
+					<section data-markdown="slides/04-postcss-intro/good.md"></section>
+					<section data-markdown="slides/04-postcss-intro/pipeline.md"></section>
+					<section data-markdown="slides/04-postcss-intro/title.md"></section>
+					<section data-markdown="slides/04-postcss-intro/using.md"></section>
+					<section data-markdown="slides/04-postcss-intro/why.md"></section>
+				</section>
+					<section data-markdown="slides/05-postcss-pitfalls/01-title.md"></section>
+					<section data-markdown="slides/05-postcss-pitfalls/01-title.md"></section>
+				<section>
+					<section data-markdown="slides/06-getting-started-wth-postcss/01-title.md"></section>
+					<section data-markdown="slides/06-getting-started-wth-postcss/autoprefixer.md"></section>
+					<section data-markdown="slides/06-getting-started-wth-postcss/cssnext.md"></section>
+					<section data-markdown="slides/06-getting-started-wth-postcss/02-resources.md"></section>
+				</section>
+				<section data-markdown="slides/07-brownfield-postcss/01-title.md"></section>
+				<section>
+					<section data-markdown="slides/08-maintainable-css/01-title.md"></section>
+					<section data-markdown="slides/08-maintainable-css/02-bem.md"></section>
+					<section data-markdown="slides/08-maintainable-css/03-maintainable-css.md"></section>
+					<section data-markdown="slides/08-maintainable-css/04-css-modules.md"></section>
+					<section data-markdown="slides/08-maintainable-css/05-stylelint.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/postcss/basics.md"></section>
-					<section data-markdown="slides/postcss/creation.md"></section>
-					<section data-markdown="slides/postcss/pipeline.md"></section>
-					<section data-markdown="slides/postcss/using.md"></section>
-					<section data-markdown="slides/postcss/why.md"></section>
+					<section data-markdown="slides/09-css-future/01-title.md"></section>
+					<section data-markdown="slides/09-css-future/02-flexbox.md"></section>
+					<section data-markdown="slides/09-css-future/03-flexbox-froggy.md"></section>
+					<section data-markdown="slides/09-css-future/04-css-variables.md"></section>
+					<section data-markdown="slides/09-css-future/05-colors.md"></section>
+					<section data-markdown="slides/09-css-future/06-grid.md"></section>
+					<section data-markdown="slides/09-css-future/07-progressive-enhancement.md"></section>
+					<section data-markdown="slides/09-css-future/08-web-components.md"></section>
 				</section>
-				<section>
-					<section data-markdown="slides/plugins/plugins.md"></section>
-					<section data-markdown="slides/plugins/autoprefixer.md"></section>
-					<section data-markdown="slides/plugins/cssnext.md"></section>
-					<section data-markdown="slides/plugins/stylelint.md"></section>
-				</section>
-				<section data-markdown="slides/thank-you.md"></section>
+				<section data-markdown="slides/10-thank-you/01-title.md"></section>
 			</div>
 		</div>
 
@@ -76,13 +92,17 @@
 			// More info https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
 				history: true,
+				progress: true,
+				slideNumber: true,
 
 				// More info https://github.com/hakimel/reveal.js#dependencies
 				dependencies: [
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: '../node_modules/caniuse-component/scripts.js', async: true },
+    			{ src: '../node_modules/caniuse-component/styles.css' }
 				]
 			});
 		</script>
