--- a/index.html
+++ b/index.html
@@ -28,17 +28,16 @@
 				<section>
 					<section data-markdown="slides/01-opening/01-title.md" data-background="assets/st-petersburg-1850.jpg"></section>
 					<section data-markdown="slides/01-opening/02-whoami.md"></section>
-					<section data-markdown="slides/01-opening/03-sorry.md"></section>
+					<section data-markdown="slides/01-opening/03-sorry.md" data-autoslide="2000"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/02-history/01-title.md"></section>
-					<section data-markdown="slides/02-history/02-special-css.md"></section>
-					<section data-markdown="slides/02-history/brief-history.md"></section>
-					<section data-markdown="slides/02-history/webpages-like-1999.md"></section>
-					<section data-markdown="slides/02-history/webpages-like-2001.md"></section>
-					<section data-markdown="slides/02-history/css-zen-garden.md"></section>
-					<section data-markdown="slides/02-history/css-history.md"></section>
-					<section data-markdown="slides/02-history/html5-to-the-rescue.md"></section>
+					<section data-markdown="slides/02-history/01-notepad.md"></section>
+					<section data-markdown="slides/02-history/02-dreamweaver.md"></section>
+					<section data-markdown="slides/02-history/03-special-css.md"></section>
+					<section data-markdown="slides/02-history/04-css-zen-garden.md"></section>
+					<section data-markdown="slides/02-history/05-css-history.md"></section>
+					<section data-markdown="slides/02-history/06-proprietry-tools.md"></section>
+					<section data-markdown="slides/02-history/07-html5-to-the-rescue.md"></section>
 				</section>
 				<section>
 					<section data-markdown="slides/03-pre-processor/01-title.md"></section>
