--- a/index.html
+++ b/index.html
@@ -28,20 +28,17 @@
 				<section>
 					<section data-markdown="slides/01-opening/01-title.md" data-background="assets/st-petersburg-1850.jpg"></section>
 					<section data-markdown="slides/01-opening/02-whoami.md"></section>
-					<section data-markdown="slides/01-opening/03-sorry.md" data-autoslide="2000"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/02-history/01-notepad.md"></section>
-					<section data-markdown="slides/02-history/02-dreamweaver.md"></section>
-					<section data-markdown="slides/02-history/03-special-css.md"></section>
-					<section data-markdown="slides/02-history/04-css-zen-garden.md"></section>
-					<section data-markdown="slides/02-history/05-css-history.md"></section>
-					<section data-markdown="slides/02-history/06-proprietry-tools.md"></section>
-					<section data-markdown="slides/02-history/07-html5-to-the-rescue.md"></section>
+					<section data-markdown="slides/02-css/01-what-is-css.md"></section>
+					<section data-markdown="slides/02-css/02-why-care.md"></section>
+					<section data-markdown="slides/02-css/03-css-history.md"></section>
+					<section data-markdown="slides/02-css/04-building-websites.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/03-pre-processor/01-title.md"></section>
-					<section data-markdown="slides/03-pre-processor/04-vs.md"></section>
+					<section data-markdown="slides/03-pre-processor/01-what-is-wrong-with-css.md"></section>
+					<section data-markdown="slides/03-pre-processor/02-pre-processors-good.md"></section>
+					<section data-markdown="slides/03-pre-processor/03-pre-processors-bad.md"></section>
 				</section>
 				<section>
 					<section data-markdown="slides/04-postcss-intro/01-title.md"></section>
@@ -54,33 +51,32 @@
 					<section data-markdown="slides/04-postcss-intro/using.md"></section>
 					<section data-markdown="slides/04-postcss-intro/why.md"></section>
 				</section>
-					<section data-markdown="slides/05-postcss-pitfalls/01-title.md"></section>
-					<section data-markdown="slides/05-postcss-pitfalls/01-title.md"></section>
 				<section>
-					<section data-markdown="slides/06-getting-started-wth-postcss/01-title.md"></section>
-					<section data-markdown="slides/06-getting-started-wth-postcss/autoprefixer.md"></section>
-					<section data-markdown="slides/06-getting-started-wth-postcss/cssnext.md"></section>
-					<section data-markdown="slides/06-getting-started-wth-postcss/02-resources.md"></section>
-				</section>
-				<section data-markdown="slides/07-brownfield-postcss/01-title.md"></section>
-				<section>
-					<section data-markdown="slides/08-maintainable-css/01-title.md"></section>
-					<section data-markdown="slides/08-maintainable-css/02-bem.md"></section>
-					<section data-markdown="slides/08-maintainable-css/03-maintainable-css.md"></section>
-					<section data-markdown="slides/08-maintainable-css/04-css-modules.md"></section>
-					<section data-markdown="slides/08-maintainable-css/05-stylelint.md"></section>
+					<section data-markdown="slides/05-getting-started-wth-postcss/01-title.md"></section>
+					<section data-markdown="slides/05-getting-started-wth-postcss/autoprefixer.md"></section>
+					<section data-markdown="slides/05-getting-started-wth-postcss/cssnext.md"></section>
+					<section data-markdown="slides/05-getting-started-wth-postcss/02-resources.md"></section>
+					<section data-markdown="slides/05-getting-started-wth-postcss/01-brownfield.md"></section>
 				</section>
 				<section>
-					<section data-markdown="slides/09-css-future/01-title.md"></section>
-					<section data-markdown="slides/09-css-future/02-flexbox.md"></section>
-					<section data-markdown="slides/09-css-future/03-flexbox-froggy.md"></section>
-					<section data-markdown="slides/09-css-future/04-css-variables.md"></section>
-					<section data-markdown="slides/09-css-future/05-colors.md"></section>
-					<section data-markdown="slides/09-css-future/06-grid.md"></section>
-					<section data-markdown="slides/09-css-future/07-progressive-enhancement.md"></section>
-					<section data-markdown="slides/09-css-future/08-web-components.md"></section>
+					<section data-markdown="slides/06-maintainable-css/01-title.md"></section>
+					<section data-markdown="slides/06-maintainable-css/02-maintainable-css.md"></section>
+					<section data-markdown="slides/06-maintainable-css/03-stylelint.md"></section>
 				</section>
-				<section data-markdown="slides/10-thank-you/01-title.md"></section>
+				<section>
+					<section data-markdown="slides/07-css-future/01-title.md"></section>
+					<section data-markdown="slides/07-css-future/02-css-variables.md"></section>
+					<section data-markdown="slides/07-css-future/03-colors.md"></section>
+					<section data-markdown="slides/07-css-future/04-grid.md"></section>
+					<section data-markdown="slides/07-css-future/05-progressive-enhancement.md"></section>
+					<section data-markdown="slides/07-css-future/06-web-components.md"></section>
+				</section>
+				<section>
+					<section data-markdown="slides/08-takeaway/01-flexbox.md"></section>
+					<section data-markdown="slides/08-takeaway/02-example.md"></section>
+					<section data-markdown="slides/08-takeaway/03-flexbox-froggy.md"></section>
+				</section>
+				<section data-markdown="slides/09-end/01-title.md"></section>
 			</div>
 		</div>
 
@@ -100,8 +96,7 @@
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-					{ src: '../node_modules/caniuse-component/scripts.js', async: true },
-    			{ src: '../node_modules/caniuse-component/styles.css' }
+					{ src: '//cdn.jsdelivr.net/caniuse-embed/1.0.1/caniuse-embed.min.js', async: true },
 				]
 			});
 		</script>
